--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,38 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Archivos y carpetas del sistema
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Configuración del entorno
+.env
+.env.*
+
+# Caché
+/cache/
+/tmp/
+/logs/
+*.log
+
+# Composer
+/vendor/
+/composer.lock
+
+# Node (si usás alguna parte con npm)
+node_modules/
+package-lock.json
+
+# Archivos del editor
+*.swp
+*.swo
+*.bak
+*.orig
+*.tmp
+
+# Backups
+*.sql
+*.zip
+
+# Archivos de despliegue
+deploy.sh
+
+# Archivos del servidor
+.htaccess
